Hidden polygon Edit mode are hidden in Object level #68715

Closed
opened 2019-08-16 05:44:17 +02:00 by Emils · 18 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.36

Blender Version
Broken: version: 2.81 (sub 2), branch: master, commit date: 2019-08-15 21:07, hash: 9dab57a9f8
Worked: (optional)

Short description of error
Hidden polygon are hidden in Object level as well 2019-08-16_06-40-45.mp4

Exact steps for others to reproduce the error
I select polygon and hide it and go to Object level this hidden polygon are displayed as well.

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.36 **Blender Version** Broken: version: 2.81 (sub 2), branch: master, commit date: 2019-08-15 21:07, hash: `9dab57a9f8` Worked: (optional) **Short description of error** Hidden polygon are hidden in Object level as well [2019-08-16_06-40-45.mp4](https://archive.blender.org/developer/F7666742/2019-08-16_06-40-45.mp4) **Exact steps for others to reproduce the error** I select polygon and hide it and go to Object level this hidden polygon are displayed as well.
Author

Added subscriber: @emilsvfx

Added subscriber: @emilsvfx

#68718 was marked as duplicate of this issue

#68718 was marked as duplicate of this issue
Emils changed title from Hidden polygon are hidden in Object level to Hidden polygon Edit mode are hidden in Object level 2019-08-16 08:38:24 +02:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm, bisecting...

Can confirm, bisecting...
Clément Foucault was assigned by Philipp Oeser 2019-08-16 11:09:29 +02:00
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

caused by 9c010c44f4, think this deserves to be at "High"?

@fclem: could you check?

caused by 9c010c44f4, think this deserves to be at "High"? @fclem: could you check?
Member

Added subscriber: @pafurijaz-4

Added subscriber: @pafurijaz-4
Member

Added subscriber: @Mets

Added subscriber: @Mets
Member

This sounds like it would be useful in some workflows, lol.

This sounds like it would be useful in some workflows, lol.

Added subscriber: @Likkez-2

Added subscriber: @Likkez-2

PLEASE LEAVE THIS IN!!! Its soooo annoying to hide anything for object mode. The only other option is Mask modifier and that thing is super slow to set up. I would really love to have this as a shading option in the panel somewhere.

PLEASE LEAVE THIS IN!!! Its soooo annoying to hide anything for object mode. The only other option is Mask modifier and that thing is super slow to set up. I would really love to have this as a shading option in the panel somewhere.

Added subscriber: @TheOldBen

Added subscriber: @TheOldBen

If it has no performance drawbacks, this bug could be a great feature, pretty much rendering the Mask Modifier unnecessary.

If it has no performance drawbacks, this bug could be a great feature, pretty much rendering the Mask Modifier unnecessary.

Sorry guys but the patch was not intended to change the behavior. This is a bug. If you have a feature request do it on Right Click select.

My personal opinion on the subject; adding an option to do this kind of behavior is not great as it add an option to do something that is already doable via the mask modifier, and which is way more flexible.

Sorry guys but the patch was not intended to change the behavior. This is a bug. If you have a feature request do it on Right Click select. My personal opinion on the subject; adding an option to do this kind of behavior is not great as it add an option to do something that is already doable via the mask modifier, and which is way more flexible.

This issue was referenced by ecc3b033a7

This issue was referenced by ecc3b033a7d2bc71f3c75cd8152a647d18457ba1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

In #68715#754397, @fclem wrote:
Sorry guys but the patch was not intended to change the behavior. This is a bug. If you have a feature request do it on Right Click select.

My personal opinion on the subject; adding an option to do this kind of behavior is not great as it add an option to do something that is already doable via the mask modifier, and which is way more flexible.

Yea, setting up mask modifier while you are in the middle of modeling is sure a user friendly experience...

> In #68715#754397, @fclem wrote: > Sorry guys but the patch was not intended to change the behavior. This is a bug. If you have a feature request do it on Right Click select. > > My personal opinion on the subject; adding an option to do this kind of behavior is not great as it add an option to do something that is already doable via the mask modifier, and which is way more flexible. Yea, setting up mask modifier while you are in the middle of modeling is sure a user friendly experience...

Removed subscriber: @TheOldBen

Removed subscriber: @TheOldBen
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68715
No description provided.