Fix T68715 Hidden polygon Edit mode are hidden in Object level